<resources>
    <string name="app_name">FivebetSerio</string>

    <!-- game_card -->
    <string name="uno">1</string>
    <string name="x">x</string>
    <string name="due">2</string>

    <!-- Login -->
    <string name="benvenuto">Benvenuto su Faivbet</string>
    <string name="frase_di_benvenuto">Benvenuto su Faivbet, la prima applicazione di scommesse
                sportive che ti permette di divertirti utilizzando un credito fittizio, comincia
                ora a divertirti!"</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Login">Login</string>
    <string name="Registrati">Registrati</string>
    <string name="Nome">Nome</string>
    <string name="Cognome">Cognome</string>
    <string name="data_di_nascita">data di nascita</string>

    <!-- Errors -->
    <string name="error_email_login">Email non corretta</string>
    <string name="error_password_login">Password non corretta</string>
    <string name="error_retrieving_leagues">There was an error retrieving the leagues</string>
    <string name="error_retrieving_matches">There was an error retrieving the matches</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_collision_user">This email is already registered</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="backbutton">backbutton</string>
    <string name="fraseBenvenuto">Inserisci i tuoi dati e inizia subito a divertirti!</string>
    <string name="data">Seleziona una data</string>
    <string name="nome_della_lega">Nome della Lega</string>
    <string name="dataMDH">**-** **:**</string>
    <string name="homeTeam">***</string>
    <string name="awayTeam">***</string>
    <string name="quota1">**</string>
    <string name="logo">Logo</string>

</resources>