<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <!-- roba varia, dovrebbe essere abbastanza facile da capire, nel caso chidete -->
    <LinearLayout
        android:id="@+id/faivbet_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"

        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/activity_layout" />
        <!-- ho usato include invece che immagineView perche non so per quale motivo
             non riuscivo a rimpicciolire l'immagine come volevo io, quindi ho creato
             un'altro xml che poi importo (c'e sicuramente un modo migliore, ma solo cosi sono riuscito a farlo) -->

    </LinearLayout>


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/benvenuto"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/faivbet_logo" />

    <TextView
        android:id="@+id/testo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/frase_di_benvenuto"
        android:textSize="15sp"
        android:textStyle="italic"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@id/textField_email"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="13dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/testo"
        app:layout_constraintBottom_toTopOf="@id/textFieldPassword"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/textField_email"
        app:layout_constraintBottom_toTopOf="@id/button_layout"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPassword"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/login_Button"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintWidth="200dp"
            android:text="@string/Login"
            android:textColor="@color/black"
            android:backgroundTint="#95f94140"
            app:layout_constraintTop_toBottomOf="@id/textFieldPassword"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            />

        <ImageButton
            android:id="@+id/loginGoogle_Button"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_marginStart="10dp"
            android:layout_width="80dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/textFieldPassword"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            android:src="@drawable/gicon"
            android:scaleType="fitCenter"
            android:contentDescription="Button with image"
            android:background="@drawable/rounded_button"
            />
    </LinearLayout>

    <Button
        android:id="@+id/register_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintWidth="120dp"
        android:textColor="@color/black"
        android:backgroundTint="#95f94140"
        android:text="@string/Registrati"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/button_layout"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        />


    <FrameLayout
        android:id="@+id/or_Line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#60000000"
        app:layout_constraintHeight="2dp"
        app:layout_constraintWidth="150dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/button_layout"
        app:layout_constraintBottom_toTopOf="@id/register_Button"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>