<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_button_register"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="37dp"
            android:contentDescription="backbutton"
            android:src="@drawable/back"
            android:backgroundTint="#ffffff"/>

        <include layout="@layout/activity_layout" />
    </LinearLayout>


    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Inserisci i tuoi dati e inizia subito a divertirti!"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nome"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Cognome"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <!--
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_di_nascita"
        app:layout_constraintTop_toBottomOf="@id/textfield_email"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            />

    </com.google.android.material.textfield.TextInputLayout>
!-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Seleziona una data"
        app:endIconMode="none"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <EditText
            android:id="@+id/register_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
        />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/textfield_date"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Registrati"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center"
        android:backgroundTint="#95f94140"
        android:layout_marginTop="10dp"
        />

</LinearLayout>